Saved model for use in other files

--- a/useModel.ipynb
+++ b/useModel.ipynb
@@ -3,12 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6d9ae763",
+   "id": "b300136d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pickle\n",
     "from sklearn.metrics import accuracy_score\n",
     "from xgboost import XGBClassifier"
    ]
@@ -16,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d19f1ec1",
+   "id": "23b5a920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7ebaaea5",
+   "id": "394a1074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,51 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "06ff1dac",
+   "execution_count": 8,
+   "id": "64f008a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=data[['mild_fever',\n",
-    " 'blood_in_sputum',\n",
-    " 'pain_behind_the_eyes',\n",
-    " 'coma',\n",
-    " 'receiving_blood_transfusion',\n",
-    " 'throat_irritation',\n",
-    " 'rusty_sputum',\n",
-    " 'slurred_speech',\n",
-    " 'enlarged_thyroid',\n",
-    " 'malaise',\n",
-    " 'increased_appetite',\n",
-    " 'dehydration',\n",
-    " 'shivering',\n",
-    " 'spotting_ urination',\n",
-    " 'muscle_wasting',\n",
-    " 'unsteadiness',\n",
-    " 'pus_filled_pimples',\n",
-    " 'dischromic _patches',\n",
-    " 'mucoid_sputum',\n",
-    " 'ulcers_on_tongue',\n",
-    " 'passage_of_gases',\n",
-    " 'altered_sensorium',\n",
-    " 'weakness_in_limbs',\n",
-    " 'visual_disturbances',\n",
-    " 'movement_stiffness',\n",
-    " 'hip_joint_pain',\n",
-    " 'lack_of_concentration',\n",
-    " 'skin_peeling',\n",
-    " 'irritability',\n",
-    " 'blister',\n",
-    " 'pain_in_anal_region',\n",
-    " 'belly_pain',\n",
-    " 'swollen_legs',\n",
-    " 'bladder_discomfort']]"
+    "import json\n",
+    "temp=json.load(open('xgmodel.json'))\n",
+    "columns=temp['learner']['feature_names']\n",
+    "X=data[columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a47efc6f",
+   "execution_count": 9,
+   "id": "381c46ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bd6b019a",
+   "execution_count": 10,
+   "id": "03b825c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 83.33%\n"
+      "Accuracy: 78.57%\n"
      ]
     }
    ],
